syntax = "proto3";

service PersonService {
    rpc AddPerson(PersonCreateRequest) returns (PersonCreateResponse) {}
}

message PersonCreateRequest {
    string name = 1;
    int32 age = 2;
    bool sex = 3;
}

message PersonCreateResponse {
    string msg = 1;
}
